attempt to delte sales terminal
